--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+.view-image-container {
+    background: transparent !important;
+}
+
+.view-image-container .mat-dialog-container {
+    background: transparent !important;
+    box-shadow: none !important;
+}
