--- a/src/app/dialogs/view-photo/view-photo.component.html
+++ b/src/app/dialogs/view-photo/view-photo.component.html
@@ -1,5 +1,5 @@
 <div class="col-12 p-0 position-relative">
-    <i class="fa fa-close close-btn" (click)="dialogRef.close()"></i>
+    <i class="fa fa-close close-btn" (click)="modalRef.close()"></i>
     <i class="fa fa-download download-btn" (click)="downloadPhoto()"></i>
     <img [src]="imageSRC" alt="" style="max-height: 90vh; max-width:100%; height: max-content;">
 </div>
